BE_SpringBoot/skala-stock-api/k8s/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk3010-v2
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk3010
      version: v2
  template:
    metadata:
      labels:
        app: sk3010
        version: v2
    spec:
      containers:
      - name: sk3010
        image: amdp-registry.skala-ai.com/skala26a-ai1/a3010-skala-stock-api:a186ce4
        ports:
        - containerPort: 8080
