BE_SpringBoot/skala-stock-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk3010
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk3010
  template:
    metadata:
      labels:
        app: sk3010
    spec:
      containers:
      - name: sk3010
        image: amdp-registry.skala-ai.com/skala26a-ai1/a3010-skala-stock-api:8cecbb4
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: sk3010-storage
          mountPath: /data
      volumes:
      - name: sk3010-storage
        persistentVolumeClaim:
          claimName: sk3010-pvc
